--- a/styles/UI/button.css
+++ b/styles/UI/button.css
@@ -12,35 +12,35 @@
     background-color: #4E6932;
 }
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
 
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .my-button {
         padding: 16px 10px;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
 
 }
-@media (width < 903px) {
+@media (max-width: 903px) {
 
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .my-button {
         padding: 17px 10px;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
 
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .my-button {
         padding: 18px 10px;
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
 
 }
 
