--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -75,7 +75,7 @@
     padding: 15px 25px;
 }
 
-@media (width < 1318px) {
+@media (max-width: 1318px) {
     .header {
         padding: 45px 0px;
     }
@@ -150,10 +150,9 @@
     }
 }
 
-@media (width <= 768px) {
+@media (max-width: 768px) {
     .header {
         padding: 0px;
-        position: fixed;
         width: 100%;
         z-index: 1000;
     }
@@ -166,15 +165,17 @@
     .header__mobile {
         display: flex;
         flex-direction: column;
-        gap: 24px;
     }
     .header__mobile-top {
+        position: fixed;
+        width: 100%;
         padding: 23px 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
         background-color: #F8F8F8;
         padding-bottom: 24px;
+        transition: transform 0.3s ease;
     }
     .mobile-menu {
     }
@@ -185,7 +186,24 @@
     }
 
     .header__mobile-section-links {
-        padding: 0px 30px;
+        position: fixed;
+        top: 95px;
+        padding: 24px 30px 23px 30px;
+        transition: transform 0.3s ease;
+        overflow-x: hidden;
+    }
+    /* .header__mobile-top.visible {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+    } */
+    .header__mobile-top.hidden {
+        transform: translateY(-100%);
+    }
+    .header__mobile-section-links.visible {
+        position: fixed;
+        top: 0px;;
     }
     .header__links-slider {
         max-width: 769px;
@@ -206,12 +224,15 @@
         font-size: 14px;
         font-weight: 500;
         line-height: 100%;
-        padding: 8px;
+        padding: 7px;
         display: inline-block;
         background-color: #FFF;
     }
 }
-@media (width <= 600px) {
+@media (max-width: 600px) {
+    .header__mobile-section-links {
+        top: 84px;
+    }
     .header__logo-link {
         max-width: 52px;
     }
@@ -220,7 +241,7 @@
         padding: 10px 18px;
     }
 }
-@media (width <= 430px) {
+@media (max-width: 430px) {
     .header__logo-link {
         max-width: 47px;
     }
