--- a/styles/custom.css
+++ b/styles/custom.css
@@ -6,37 +6,37 @@
     text-transform: uppercase;
 }
 
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .block-title {
         font-size: 42px;
         margin-bottom: 55px;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
     .block-title {
         font-size: 35px;
         margin-bottom: 50px;
     }
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .block-title {
         font-size: 46px;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
     .block-title {
         font-size: 38px;
         margin-bottom: 48px;
     }
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .block-title {
         font-size: 35px;
         margin-bottom: 45px;
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
     .block-title {
         font-size: 32px;
     }
