--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -9,7 +9,7 @@
     left: 0;
     z-index: 3;
 }
-@media (width <= 1318px) {
+@media (max-width: 1318px) {
     [class$="background-img"] {
         display: none;
     }
@@ -145,10 +145,10 @@
     width: 100%;
 }
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
 
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .top-block__title {
         font-size: 34px;
         margin-top: 4px;
@@ -184,7 +184,7 @@
         width: 100%;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
     .top-block__container {
         gap: 45px;
         flex-direction: column-reverse;
@@ -241,12 +241,12 @@
         top: -34px;
     }
 }
-@media (width < 903px) {
+@media (max-width: 903px) {
     .top-block__link {
         width: 218px;
     }
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .top-block__container {
         gap: 34px;
     }
@@ -278,7 +278,7 @@
         max-height: 390px;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
     .top-block__body {
         gap: 61px;
     }
@@ -299,7 +299,7 @@
         margin-right: 0px;
     }
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .top-block__container {
         gap: 28px;
     }
@@ -330,25 +330,25 @@
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
     .top-block__title {
         font-size: 22px;
     }
 }
 
-@media (width <= 768px) {
+@media (max-width: 768px) {
     .top-block {
-        padding-top: calc(28px + 150.4px);
+        padding-top: calc(13px + 174px);
     }
 }
-@media (width <= 600px) {
+@media (max-width: 600px) {
     .top-block {
-        padding-top: calc(28px + 150.4px);
+        padding-top: calc(13px + 161px);
     }
 }
-@media (width <= 430px) {
+@media (max-width: 430px) {
     .top-block {
-        padding-top: calc(28px + 150.9px);
+        padding-top: calc(13px + 161px);
     }
 }
 
@@ -463,7 +463,7 @@
     object-fit: cover;
 }
 
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .branches__body {
         gap: 30px;
         flex-direction: column;
@@ -488,7 +488,7 @@
         max-width: none;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
     .branches__button {
         flex: 0 1 calc(50% - 12px);
     }
@@ -506,7 +506,7 @@
         max-height: none;
     }
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .branches__content-item.active {
         flex-direction: column;
         gap: 30px;
@@ -524,7 +524,7 @@
         align-items: center;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
     .branches__button {
         flex: 0 1 calc(100% - 12px);
     }
@@ -536,7 +536,7 @@
         gap: 15px;
     }
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .branches__body {
         gap: 40px;
     }
@@ -579,7 +579,7 @@
         padding: 22px 20px;
     }
 }
-@media (width < 431px) {
+@media (max-width: 431px) {
     .branches__body {
         gap: 45px;
     }
@@ -725,7 +725,7 @@
     line-height: 120%;
     color: #4E6932;
 }
-@media (width < 1341px) {
+@media (max-width: 1341px) {
     .inspiration__slider {
         max-height: none;
     }
@@ -742,7 +742,7 @@
         max-width: none;
     }
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .inspiration__title {
         margin-right: 60px;
     }
@@ -754,12 +754,12 @@
         font-size: 18px;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
     .inspiration__title {
         margin-right: 40px;
     }
 }
-@media (width < 902px) {
+@media (max-width: 902px) {
     .inspiration__desc {
         flex-direction: column;
         margin-bottom: 50px;
@@ -778,7 +778,7 @@
         font-size: 16px;
     }
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .inspiration__container {
         padding: 0px;
     }
@@ -822,7 +822,7 @@
         color: #4E6932;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
     .inspiration__desc {
         margin-bottom: 48px;
         gap: 48px;
@@ -834,7 +834,7 @@
         margin-bottom: 25px;
     }
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .inspiration__desc {
         margin-bottom: 45px;
         gap: 45px;
@@ -850,7 +850,7 @@
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
     .modern-tools {
         padding-top: 90px;
     }
@@ -922,7 +922,7 @@
     transform: rotate(-90deg);
 }
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
     .avantage-descripion__pre-title {
         font-size: 22px;
     }
@@ -933,14 +933,14 @@
         margin-bottom: 70px;
     }
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .avantage-descripion {
         margin-bottom: 60px!important;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
 }
-@media (width < 902px) {
+@media (max-width: 902px) {
     .avantage-descripion__title {
         margin-right: 0px;
     }
@@ -967,7 +967,7 @@
         margin-bottom: 28px;
     }
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .avantage-descripion__pre-title {
         display: none;
     }
@@ -983,13 +983,13 @@
     }
     
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
     .avantage-descripion {
         margin-bottom: 48px!important;
         gap: 48px;
     }
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .avantage-descripion {
         margin-bottom: 45px!important;
         gap: 45px;
@@ -999,7 +999,7 @@
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
 }
 
 
@@ -1076,7 +1076,7 @@
     position: static;
 }
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
     .project-activity__slide-wrap-img {
         width: auto;
         height: auto;
@@ -1086,13 +1086,13 @@
         max-height: none;
     }
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
 
 }
-@media (width < 902px) {
+@media (max-width: 902px) {
 
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .project-activity__slider {
         margin-bottom: 35px;
     }
@@ -1100,10 +1100,10 @@
         margin-bottom: 30px;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
 
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .project-activity__swiper {
         margin-bottom: 20px;
     }
@@ -1112,7 +1112,7 @@
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
     .project-activity {
         padding-top: 90px;
     }
@@ -1194,7 +1194,7 @@
     position: static;
 }
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
     .modern-tools__slide-wrap-img {
         width: auto;
         height: auto;
@@ -1204,13 +1204,13 @@
         max-height: none;
     }
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
 
 }
-@media (width < 902px) {
+@media (max-width: 902px) {
 
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .modern-tools__container {
         padding: 0px;
     }
@@ -1228,16 +1228,16 @@
         padding: 0px;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
 
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .modern-tools__swiper {
         margin-bottom: 20px;
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
     .modern-tools {
         padding-top: 90px;
     }
@@ -1286,20 +1286,20 @@
 }
 .preparing-child__link {
 }
-@media (width < 1341px) {
+@media (max-width: 1341px) {
     .preparing-child__content-img {
         height: auto;
         width: auto;
         aspect-ratio: 1280 / 540;
     }
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
 
 }
-@media (width < 902px) {
+@media (max-width: 902px) {
 
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .preparing-child__content-img {
         height: 400px;
         width: 100%;
@@ -1313,10 +1313,10 @@
         margin-bottom: 35px;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
 
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .preparing-child__content-img {
         height: 275px;
         width: 100%;
@@ -1330,7 +1330,7 @@
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
     .preparing-child {
         padding-top: 90px;
     }
@@ -1448,12 +1448,12 @@
 .why-choose-us__feedback-block {
 }
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
     .why-choose-us__accordion-button-title {
         font-size: 22px;
     }
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .why-choose-us__accordion-body {
         padding-right: 80px;
     }
@@ -1473,7 +1473,7 @@
         max-width: 390px;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
     .why-choose-us__accordion-button-text {
         max-width: 326px;
         margin-right: 0px;
@@ -1486,7 +1486,7 @@
         max-width: 330px;
     }
 }
-@media (width < 790px) {
+@media (max-width: 790px) {
     .why-choose-us__accordion-button-title {
         max-width: 350px;
         margin-right: 30px;
@@ -1514,7 +1514,7 @@
         max-width: 510px;
     }
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .why-choose-us__container {
         padding: 0px;
     }
@@ -1528,12 +1528,12 @@
         margin-bottom: 85px;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
     .why-choose-us__accordion-body {
         gap: 30px;
     }
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .why-choose-us__accordion-button::after {
         position: relative;
         top: 10%;
@@ -1568,7 +1568,7 @@
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
     .why-choose-us__title {
         margin-bottom: 40px;
     }
@@ -1652,7 +1652,7 @@
 }
 .lifestyle-item__swiper-button-prev, .lifestyle-item__swiper-button-next {
     top: auto;
-    position: relative;
+    position: static;
     bottom: 0;
 }
 .lifestyle-item__swiper-button-prev {
@@ -1699,11 +1699,14 @@
 .lifestyle-item__pre-title-mobile {
     display: none;
 }
+.lifestyle-item__footnote-mobile {
+    display: none;
+}
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
 
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .lifestyle-item__container {
         gap: 78px;
     }
@@ -1740,13 +1743,13 @@
         gap: 18px;
     }
 }
-@media (width < 1100px) {
+@media (max-width: 1100px) {
     .lifestyle-item__container {
         gap: 50px;
         justify-content: space-between;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
     .lifestyle-item__container {
         gap: 50px;
         flex-direction: column;
@@ -1785,7 +1788,7 @@
         max-width: none;
     }
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .lifestyle-item__container {
         padding: 0px;
     }
@@ -1811,6 +1814,9 @@
         line-height: 130%;
         color: #4E6932;
     }
+    .lifestyle-item__footnote-mobile {
+        display: block;
+    }
     .lifestyle-item__swiper-navigation {
         display: none;
     }
@@ -1830,7 +1836,7 @@
         display: none;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
     .lifestyle-item__swiper {
         margin-bottom: 25px;
     }
@@ -1842,7 +1848,7 @@
         gap: 48px;
     }
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .lifestyle-item__swiper {
         margin-bottom: 20px;
     }
@@ -1861,7 +1867,7 @@
         font-size: 14px;
     }
 }
-@media (width < 431px) {
+@media (max-width: 431px) {
     .lifestyle-item__title {
         font-size: 32px;
     }
@@ -1988,6 +1994,28 @@
     bottom: 32px!important;
 }
 
+@media (max-width: 1341px) {
+
+}
+@media (max-width: 1281px) {
+
+}
+@media (max-width: 992px) {
+
+}
+@media (max-width: 769px) {
+
+}
+@media (max-width: 651px) {
+
+}
+@media (max-width: 551px) {
+
+}
+@media (max-width: 431px) {
+
+}
+
 
 /* БЛОК ВСЕСТОРОННЕЕ РАЗВИТИЕ */
 .development {
@@ -2096,15 +2124,15 @@
     overflow: hidden;
 }
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
 
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .development__image-card-img-wrap {
         height: 480px;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
     .development__image-card-img-wrap {
         height: 430px;
     }
@@ -2118,7 +2146,7 @@
         padding: 24px 31px;
     }
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .development__container {
         padding: 0px;
     }
@@ -2132,7 +2160,7 @@
     .development__slider {
         margin-bottom: 0px;
         order: 2;
-        padding: 0px 30px;
+        padding: 30px;
         background-color: rgba(248, 248, 248, 1);
     }
     .development__image-card-title {
@@ -2154,11 +2182,14 @@
         justify-content: center;
         border: 1px solid rgba(78, 105, 50, 1);
     }
+    .development__button:hover, .development__button:focus, .development__button:active, .development__button.active  {
+        border: 1px solid #C7D8A5!important;
+    }
     .development__button-img {
         margin-right: 20px;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
     .development__image-card-img-wrap {
         height: 390px;
     }
@@ -2171,7 +2202,7 @@
         padding: 18px;
     }
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .development__image-card-img-wrap {
         height: 275px;
     }
@@ -2190,7 +2221,7 @@
         top: -10px;
     }
 }
-@media (width < 431px) {
+@media (max-width: 431px) {
 
 }
 
@@ -2304,7 +2335,7 @@
     padding-bottom: 17px;
 }
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
     .holidays__image-card-img-wrap {
         height: auto;
         width: auto;
@@ -2318,7 +2349,7 @@
         font-size: 15px;
     }
 }
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .holidays__texts {
         margin-right: 0px;
     }
@@ -2333,7 +2364,7 @@
         margin-right: 0px!important;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
     .holidays__description {
         margin-bottom: 60px;
         gap: 60px;
@@ -2349,7 +2380,7 @@
         max-width: 628px;
     }
 }
-@media (width < 902px) {
+@media (max-width: 902px) {
     .holidays__description {
         margin-bottom: 50px;
         gap: 50px;
@@ -2371,7 +2402,7 @@
         margin-bottom: 30px;
     }
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .holidays__container {
         padding: 0px;
     }
@@ -2399,13 +2430,13 @@
         padding: 0px 30px;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
     .holidays__description {
         margin-bottom: 48px;
         gap: 48px;
     }
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .holidays__description {
         margin-bottom: 45px;
         gap: 45px;
@@ -2423,7 +2454,7 @@
         margin-bottom: 16px;
     }
 }
-@media (width < 431px) {
+@media (max-width: 431px) {
     .holidays {
         padding-top: 90px;
     }
@@ -2508,7 +2539,7 @@
     width: 100%;
 }
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
     .teachers__slide-img-wrap {
         height: auto;
         width: auto;
@@ -2521,7 +2552,7 @@
     }
 }
 
-@media (width < 992px) {
+@media (max-width: 992px) {
     .teachers__slide {
         max-width: none;
     }
@@ -2536,18 +2567,18 @@
     }
 }
 
-@media (width < 769px) {
+@media (max-width: 769px) {
     .teachers__slide-title {
         font-size: 18px;
         margin-bottom: 13px;
     }
 }
 
-@media (width < 651px) {
+@media (max-width: 651px) {
     
 }
 
-@media (width < 551px) {
+@media (max-width: 551px) {
     .teachers__container {
         padding: 0px;
     }
@@ -2597,7 +2628,7 @@
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
     .teachers {
         padding-top: 90px;
     }
@@ -2717,7 +2748,7 @@
     width: 100%;
 }
 
-@media (width < 1341px) {
+@media (max-width: 1341px) {
     .reviews__content {
         padding: 35px 30px;
         gap: 35px;
@@ -2735,7 +2766,7 @@
     }
 }
 
-@media (width < 992px) {
+@media (max-width: 992px) {
     .reviews__content {
         padding: 20px 25px;
         gap: 30px;
@@ -2743,7 +2774,7 @@
     }
 }
 
-@media (width < 769px) {
+@media (max-width: 769px) {
     .reviews__container {
         padding: 0px;
     }
@@ -2777,11 +2808,11 @@
     }
 }
 
-@media (width < 651px) {
+@media (max-width: 651px) {
     
 }
 
-@media (width < 551px) {
+@media (max-width: 551px) {
     .reviews__content {
         padding: 0;
         gap: 30px;
@@ -2821,7 +2852,7 @@
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
     .reviews__content {
         margin-bottom: 90px;
     }
@@ -2933,13 +2964,13 @@
     width: 100%;
 }
 
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .contacts__address-item {
         font-size: 14px;
     }
 }
 
-@media (width < 992px) {
+@media (max-width: 992px) {
     .contacts__inner {
         padding: 20px 0px;
         flex-direction: column;
@@ -2966,7 +2997,7 @@
     }
 }
 
-@media (width < 769px) {
+@media (max-width: 769px) {
     .contacts__inner {
         padding: 0px;
         flex-direction: column;
@@ -3008,11 +3039,11 @@
     }
 }
 
-@media (width < 651px) {
+@media (max-width: 651px) {
 
 }
 
-@media (width < 551px) {
+@media (max-width: 551px) {
     .contacts {
         padding-top: 90px;
     }
@@ -3050,35 +3081,35 @@
     }
 }
 
-@media (width < 431px) {
+@media (max-width: 431px) {
 }
 
-@media (width < 1281px) {
+@media (max-width: 1281px) {
     .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .teachers, .reviews, .contacts {
         padding-top: 115px;
     }
 }
-@media (width < 992px) {
+@media (max-width: 992px) {
     .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .teachers, .reviews, .contacts {
         padding-top: 111px;
     }
 }
-@media (width < 769px) {
+@media (max-width: 769px) {
     .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .teachers, .reviews, .contacts {
         padding-top: 107px;
     }
 }
-@media (width < 651px) {
+@media (max-width: 651px) {
     .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .teachers, .reviews, .contacts {
         padding-top: 104px;
     }
 }
-@media (width < 551px) {
+@media (max-width: 551px) {
     .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .teachers, .reviews, .contacts {
         padding-top: 95px;
     }
 }
-@media (width < 431px) {
+@media (max-width: 431px) {
     .branches, .inspiration, .project-activity, .modern-tools, .preparing-child, .why-choose-us, .lifestyle-item, .dev-environment, .development, .holidays, .teachers, .reviews, .contacts {
         padding-top: 90px;
     }
