--- a/styles/UI/checkbox.css
+++ b/styles/UI/checkbox.css
@@ -26,3 +26,38 @@
 .my-checkbox__text-link {
     text-decoration: underline;
 }
+
+@media (max-width: 1281px) {
+
+}
+
+@media (max-width: 992px) {
+    .my-checkbox__new {
+        height: 16px;
+        width: 21px;
+    }
+}
+
+@media (max-width: 769px) {
+    .my-checkbox__new {
+        height: 16px;
+        width: 16px;
+    }
+}
+
+@media (max-width: 651px) {
+    
+}
+
+@media (max-width: 551px) {
+    .my-checkbox__text {
+        max-width: 150px;
+    }
+}
+
+@media (max-width: 431px) {
+    .feedback-form {
+        padding: 20px 20px 30px 20px;
+    }
+}
+
