--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -75,6 +75,66 @@
     padding: 15px 25px;
 }
 
+.mobile-menu__content {
+    position: absolute;
+    top: 94px;
+    right: -100%;
+    height: 100vh;
+    background: #F8F8F8;
+    display: none;
+    transition: right 0.3s ease-in-out;
+    z-index: 2000;
+}
+.mobile-menu__content.visible {
+    display: block;
+    right: 0;
+}
+.mobile-menu__content-inner {
+    padding: 30px;
+    background: #F8F8F8;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+.mobile-menu__links {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.mobile-menu__link-item {
+}
+.mobile-menu__link {
+    line-height: 100%;
+    color: #030303;
+}
+.mobile-menu__buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.header__mobile-link-phone {
+    font-size: 12px;
+    line-height: 100%;
+    color: #030303;
+    padding: 9px 10px;
+}
+.header__mobile-button {
+    font-size: 12px;
+    line-height: 100%;
+    color: #030303;
+    text-transform: uppercase;
+    padding: 9px 10px;
+}
+.mobile-menu__contacts {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.mobile-menu__contact-link {
+    line-height: 100%;
+    color: #4E6932;
+}
+
 @media (max-width: 1318px) {
     .header {
         padding: 45px 0px;
@@ -191,7 +251,7 @@
         padding: 24px 30px 23px 30px;
         transition: transform 0.3s ease;
         overflow-x: hidden;
-        z-index: 10000;
+        z-index: -1;
         width: 100%;
     }
     .header__mobile-top.active {
@@ -200,15 +260,6 @@
     .header__mobile-section-links.active {
         position: fixed;
         background-color: #F8F8F8;
-    }
-    .header__mobile-section-links {
-        position: absolute;
-        top: 95px;
-        padding: 24px 30px 23px 30px;
-        transition: transform 0.3s ease;
-        overflow-x: hidden;
-        z-index: 10000;
-        width: 100%;
     }
     .header__mobile-top.hidden {
         transform: translateY(-100%);
@@ -246,7 +297,11 @@
 }
 @media (max-width: 600px) {
     .header__mobile-section-links {
-        top: 84px;
+        top: 80px;
+    }
+    .mobile-menu__content {
+        position: absolute;
+        top: 80px;
     }
     .header__logo-link {
         max-width: 52px;
