--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -80,6 +80,7 @@
     top: 94px;
     right: -100%;
     height: 100vh;
+    width: 100%;
     background: #F8F8F8;
     display: none;
     transition: right 0.3s ease-in-out;
@@ -111,6 +112,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    max-width: 150px;
 }
 .header__mobile-link-phone {
     font-size: 12px;
