--- a/styles/custom.css
+++ b/styles/custom.css
@@ -70,15 +70,12 @@
 .swiper-button-prev::after, .swiper-button-next::after {
     content: '';
 }
-.swiper-button-prev:hover, .swiper-button-next:hover {
-    opacity: 1;
-}
 .swiper-button-prev {
     right: 42px;
     top: 0;
 }
-.swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
-    opacity: 0.5;
+.swiper-button-next.swiper-button-disabled svg path, .swiper-button-prev.swiper-button-disabled svg path {
+    fill: rgba(179, 179, 179, 1);
 }
 .swiper-button-prev-img {
 }
@@ -114,4 +111,35 @@
 
 .no-scroll {
     overflow: hidden; 
+}
+
+.tippy-box {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 16px;
+}
+.tippy-content {
+    padding: 0px;
+    font-size: 20px;
+    line-height: 120%;
+    color: #4E6932;
+}
+
+@media (max-width: 769px) {
+    .tippy-box {
+        padding: 15px;
+    }
+    .tippy-content {
+        font-size: 16px;
+    }
+}
+@media (max-width: 651px) {
+    .tippy-content {
+        font-size: 15px;
+    }
+}
+@media (max-width: 551px) {
+    .tippy-content {
+        font-size: 14px;
+    }
 }
