--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -2287,7 +2287,7 @@
 }
 .development__slide-popup {
     display: none;
-    opacity: 0;
+    /* opacity: 0;
     position: absolute;
     bottom: -145px;
     left: 50%;
@@ -2303,12 +2303,12 @@
     transition: opacity .5s ease-in;
     z-index: 1000;
     max-width: 351px;
-    width: 100%;
+    width: 100%;*/
 }
-.development__button:hover .development__slide-popup {
+/* .development__button:hover .development__slide-popup {
     display: block;
     opacity: 1;
-}
+} */
 
 @media (max-width: 1341px) {
 
@@ -2345,7 +2345,7 @@
     }
     .development__slide-popup {
         font-size: 16px;
-        padding: 17px;
+        padding: 15px;
         bottom: -95px;
     }
     .development__slider {
@@ -2372,10 +2372,6 @@
         padding: 20px 25px;
         justify-content: center;
         border: 1px solid rgba(78, 105, 50, 1);
-    }
-    .development__slide-popup {
-        font-size: 18px;
-        padding: 15px;
     }
     .development__button:hover, .development__button:focus, .development__button:active, .development__button.active  {
         border: 1px solid #C7D8A5!important;
