--- a/styles/reset.css
+++ b/styles/reset.css
@@ -50,7 +50,7 @@
 
 html,
 body {
-    height: 100%;
+    min-height: 100%;
     font-family: "Montserrat";
     font-size: 14px;
     font-weight: 500;
@@ -105,9 +105,19 @@ button {
 }
 
 .wrapper {
-    height: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
+    background: url('../assets/images/background.png') repeat-y;
+    background-size: 100%;
+    background-position: center top;
+    min-height: 100%;
+}
+
+@media (max-width: 1340px) {
+    .wrapper {
+        background: none;
+    }
 }
 
 .my-container {
@@ -115,6 +125,7 @@ button {
     margin: 0 auto;
     padding: 0px 30px;
     box-sizing: content-box;
+    background-color: #FFF;
 }
 
 .main {
